--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- ver -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,10 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <header></header>
+    <section></section>
+    <section></section>
+    <section></section>
+    <footer></footer>   
 </body>
 </html>
