--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav></nav>
     <main>
         <section>
-            <h1>commit</h1>
+            <h1>nombre</h1>
         </section>
         <section></section>
         <section></section>
